crates/sema/tests/programs/nulls.diag
error[E0312]: possibly-null value assigned to non-nullable variable `String` — declare it `String?` or narrow with a null check (SPECS §4.1)
  --> nulls.as:1:18
   |
 1 | var bad:String = null;                    // E0312 null literal
   |                  ^^^^
error[E0312]: possibly-null value assigned to non-nullable parameter `String` — declare it `String?` or narrow with a null check (SPECS §4.1)
  --> nulls.as:4:7
   |
 4 | needs(maybe);                             // E0312 unnarrowed argument
   |       ^^^^^
error[E0313]: `String` value may be null here — narrow with a null check first (SPECS §4.1)
  --> nulls.as:5:7
   |
 5 | trace(maybe.length);                      // E0313 unnarrowed deref
   |       ^^^^^^^^^^^^
error[E0312]: possibly-null value assigned to non-nullable field `String` — declare it `String?` or narrow with a null check (SPECS §4.1)
   --> nulls.as:15:1
    |
 15 | h.name = h.tag;                           // E0312 nullable into non-nullable field
    | ^^^^^^^^^^^^^^
error[E0312]: possibly-null value assigned to non-nullable variable `String` — declare it `String?` or narrow with a null check (SPECS §4.1)
   --> nulls.as:19:18
    |
 19 | var got:String = giveOrNot(true);         // E0312 nullable return
    |                  ^^^^^^^^^^^^^^^
